@@ -2,7 +2,7 @@
 #ifndef _OPENCLAS_UNIT_TEST_K_SHORTEST_PATH_HPP_
 #define _OPENCLAS_UNIT_TEST_K_SHORTEST_PATH_HPP_
 
-#include <openclas/k_shortest_path.h>
+#include <openclas/k_shortest_path.hpp>
 
 BOOST_AUTO_TEST_SUITE( k_shortest_path )
 
